Lab1/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error
    9       | Specifier ExtDecList error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec COMMA error

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | /* empty */

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec
   26        | ParamDec error VarList

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | error RC

   30 StmtList: Stmt StmtList
   31         | /* empty */

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI

   39 DefList: Def DefList
   40        | /* empty */

   41 Def: Specifier DecList SEMI
   42    | Specifier error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList
   45        | Dec error DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp
   48    | VarDec ASSIGNOP error

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT
   67    | ID LP error RP
   68    | LB error RB

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 12 26 29 38 42 45 48 67 68
INT (258) 21 65
FLOAT (259) 66
SEMI (260) 4 5 7 32 34 38 41 42
COMMA (261) 11 12 24 44 69
ASSIGNOP (262) 47 48 49
RELOP (263) 52
ID (264) 17 19 20 22 23 60 61 63 64 67
TYPE (265) 13
DOT (266) 63
PLUS (267) 53
MINUS (268) 54 58
STAR (269) 55
DIV (270) 56
AND (271) 50
OR (272) 51
NOT (273) 59
LP (274) 22 23 35 36 37 57 60 61 67
RP (275) 22 23 35 36 37 57 60 61 67
LB (276) 21 62 68
RB (277) 21 62 68
LC (278) 15 28
RC (279) 15 28 29
STRUCT (280) 15 16
RETURN (281) 34
IF (282) 35 36
ELSE (283) 36
WHILE (284) 37
LOWER_THAN_ELSE (285)
NEG (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (36)
    on left: 10 11 12, on right: 4 9 11
Specifier (37)
    on left: 13 14, on right: 4 5 6 8 9 27 41 42
StructSpecifier (38)
    on left: 15 16, on right: 14
OptTag (39)
    on left: 17 18, on right: 15
Tag (40)
    on left: 19, on right: 16
VarDec (41)
    on left: 20 21, on right: 10 11 12 21 27 46 47 48
FunDec (42)
    on left: 22 23, on right: 6
VarList (43)
    on left: 24 25 26, on right: 22 24 26
ParamDec (44)
    on left: 27, on right: 24 25 26
CompSt (45)
    on left: 28 29, on right: 6 33
StmtList (46)
    on left: 30 31, on right: 28 30
Stmt (47)
    on left: 32 33 34 35 36 37 38, on right: 30 35 36 37
DefList (48)
    on left: 39 40, on right: 15 28 39
Def (49)
    on left: 41 42, on right: 39
DecList (50)
    on left: 43 44 45, on right: 41 44 45
Dec (51)
    on left: 46 47 48, on right: 43 44 45
Exp (52)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68, on right: 32 34 35 36 37 47 49 50 51 52 53 54 55 56 57 58
    59 62 63 69 70
Args (53)
    on left: 69 70, on right: 60 69


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


state 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    8       | Specifier . error
    9       | Specifier . ExtDecList error

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


state 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


state 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


state 10

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


state 11

   15 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


state 12

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 15

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


state 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 17

   20 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 20 (VarDec)


state 18

    4 ExtDef: Specifier ExtDecList . SEMI
    9       | Specifier ExtDecList . error

    error  shift, and go to state 23
    SEMI   shift, and go to state 24


state 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   12           | VarDec . COMMA error
   21 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 10 (ExtDecList)


state 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


state 21

   15 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


state 22

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


state 23

    9 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 9 (ExtDef)


state 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 25

   11 ExtDecList: VarDec COMMA . ExtDecList
   12           | VarDec COMMA . error

    error  shift, and go to state 37
    ID     shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


state 26

   21 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


state 27

   29 CompSt: error . RC

    RC  shift, and go to state 41


state 28

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 32


state 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 30

   41 Def: Specifier . DecList SEMI
   42    | Specifier . error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


state 31

   15 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


state 32

   39 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 32


state 33

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


state 34

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 49


state 35

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


state 36

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .
   26        | ParamDec . error VarList

    error  shift, and go to state 51
    COMMA  shift, and go to state 52

    RP  reduce using rule 25 (VarList)


state 37

   12 ExtDecList: VarDec COMMA error .

    $default  reduce using rule 12 (ExtDecList)


state 38

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


state 39

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


state 40

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


state 41

   29 CompSt: error RC .

    $default  reduce using rule 29 (CompSt)


state 42

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LB      shift, and go to state 61
    LC      shift, and go to state 28
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


state 43

   42 Def: Specifier error . SEMI

    SEMI  shift, and go to state 69


state 44

   21 VarDec: VarDec . LB INT RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp
   48    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 26

    $default  reduce using rule 46 (Dec)


state 45

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 71


state 46

   43 DecList: Dec .
   44        | Dec . COMMA DecList
   45        | Dec . error DecList

    error  shift, and go to state 72
    COMMA  shift, and go to state 73

    SEMI  reduce using rule 43 (DecList)


state 47

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


state 48

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


state 49

   21 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 27 (ParamDec)


state 50

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


state 51

   26 VarList: ParamDec error . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 36


state 52

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 75
    ParamDec         go to state 36


state 53

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


state 54

   29 CompSt: error . RC
   38 Stmt: error . SEMI

    SEMI  shift, and go to state 76
    RC    shift, and go to state 41


state 55

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


state 56

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


state 57

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   64    | ID .
   67    | ID . LP error RP

    LP  shift, and go to state 77

    $default  reduce using rule 64 (Exp)


state 58

   58 Exp: MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 78


state 59

   59 Exp: NOT . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 79


state 60

   57 Exp: LP . Exp RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 80


state 61

   68 Exp: LB . error RB

    error  shift, and go to state 81


state 62

   34 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 82


state 63

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 83


state 64

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 84


state 65

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


state 66

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


state 67

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LB      shift, and go to state 61
    LC      shift, and go to state 28
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 86
    Stmt      go to state 67
    Exp       go to state 68


state 68

   32 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97


state 69

   42 Def: Specifier error SEMI .

    $default  reduce using rule 42 (Def)


state 70

   47 Dec: VarDec ASSIGNOP . Exp
   48    | VarDec ASSIGNOP . error

    error  shift, and go to state 98
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 99


state 71

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


state 72

   45 DecList: Dec error . DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 100
    Dec      go to state 46


state 73

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 101
    Dec      go to state 46


state 74

   26 VarList: ParamDec error VarList .

    $default  reduce using rule 26 (VarList)


state 75

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


state 76

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


state 77

   60 Exp: ID LP . Args RP
   61    | ID LP . RP
   67    | ID LP . error RP

    error  shift, and go to state 102
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 103
    LB     shift, and go to state 61

    Exp   go to state 104
    Args  go to state 105


state 78

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 97

    $default  reduce using rule 58 (Exp)


state 79

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 97

    $default  reduce using rule 59 (Exp)


state 80

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 106
    LB        shift, and go to state 97


state 81

   68 Exp: LB error . RB

    RB  shift, and go to state 107


state 82

   34 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    SEMI      shift, and go to state 108
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97


state 83

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 109


state 84

   37 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 110


state 85

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


state 86

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


state 87

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


state 88

   49 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 111


state 89

   52 Exp: Exp RELOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 112


state 90

   63 Exp: Exp DOT . ID

    ID  shift, and go to state 113


state 91

   53 Exp: Exp PLUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 114


state 92

   54 Exp: Exp MINUS . Exp
